# stgproject

./: .gitignore  CMakeLists.txt  README.md
include/: window.hpp
src/: hello.cpp  main.cpp  window.cpp
